# QandA_machine

./: .gitignore  CMakeLists.txt  README.md  doxygen_config.txt
QAMachine/: IAdapter.h  IDatabase.h  IFileHandle.h  IFileHandleFactory.h  IMachineCore.h  IQAMachineCore.h  MachineCore.cpp  MachineCore.h  QACsvHandle.cpp  QACsvHandle.h  QADataBase.cpp  QADataBase.h  QAMachine.sln  QAMachine.vcxproj  QAMachine.vcxproj.filters  QAMachineCore.cpp  QAMachineCore.h  QAPairsSet.h  QAPlainTextHandle.cpp  QAPlainTextHandle.h  QAVocabulary.cpp  QAVocabulary.h  QApairsQAset.cpp  QApairsQAset.h  Q_A_set.txt  Stemmer.h  Vocabulary.cpp  Vocabulary.h  main.cpp  quiz.txt  rejected.txt
QAMachine/testDataset/: unsorted-1.txt  unsorted-12.txt  unsorted-13.txt  unsorted-14.txt  unsorted-3.txt  unsorted-4.txt  unsorted-5.txt  unsorted-6.txt  unsorted-8.txt
QAMachine/tests/: tests.pro  tests.vcxproj  tests.vcxproj.filters  tst_qaunittests.cpp
QAMachine/trainingDataset/: animals.txt  art.txt  cinema-tv.txt  clothes.txt  geography.txt  history.txt  it-internet.txt  literature.txt  music.txt  other.txt  proverbs.txt  russian-cars.txt  sport.txt  traditions.txt
dataset/: stemmerStrings.txt
dataset/Processed_Dataset/: vocabTemp.txt
dataset/trainingDataset/: astrology.txt  astronomy.txt  billionaire.txt  fairy-tales.txt  greek-myths.txt  harry-potter.txt  jokes.txt  military.txt  plants.txt  scanwords.txt  science.txt  traveling.txt
dataset/unit_test/: QA_Set.txt  dataStrings.txt  vocabRejectionTest.txt  (+1 more)
src/: main.cpp
test/: CMakeLists.txt  tst_qaunittests.cpp  tst_qaunittests.h
(+25 files in other folders)
